Set background color for infoButton when active. This fixes issue where is becomes invisible while selected.

--- a/src/sql/base/browser/ui/infoButton/infoButton.css
+++ b/src/sql/base/browser/ui/infoButton/infoButton.css
@@ -36,17 +36,17 @@
 	margin: 0px;
 }
 
-.info-button {
+.info-button, .monaco-workbench .info-button[tabindex="0"]:active {
 	background-color: #fff;
 	border-radius: 2px;
 	box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.13);
 	display: inline-block;
 }
-.vs-dark .info-button {
+.vs-dark .info-button, .monaco-workbench.vs-dark .info-button[tabindex="0"]:active {
 	background-color: #1b1a19;
 	box-shadow: 0px 1px 4px rgba(255, 255, 255, 0.13);
 }
-.hc-black .info-button {
+.hc-black .info-button, .monaco-workbench.hc-black .info-button[tabindex="0"]:active {
 	background-color: #000;
 	box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.13);
 }
